fixed layout problems

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -25,7 +25,7 @@
     font-weight: bold;
     font-size: 12px;
     color: white;
-    y-align: middle;
+    y-align: start;
 }
 
 /* Bottom row contains artist and controls side by side */
@@ -37,7 +37,7 @@
 .media-music-artist {
     font-size: 10px;
     color: #cccccc;
-    y-align: middle;
+    y-align: start;
 }
 
 /* Controls take right half of bottom row */
